搭建自己的nexus，修改配置文件

--- a/env-manage/customer-api/pom.xml
+++ b/env-manage/customer-api/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>com.infore</groupId>
-            <artifactId>manage-service-api</artifactId>
+            <artifactId>manage-server-api</artifactId>
             <version>${infore.common.version}</version>
         </dependency>
 
