--- a/env-manage/pom.xml
+++ b/env-manage/pom.xml
@@ -1,79 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.infore</groupId>
-    <artifactId>manage</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <modules>
-        <module>customer-api</module>
-        <module>common</module>
-        <module>manage-server-api</module>
-    </modules>
-    <packaging>pom</packaging>
+	<groupId>com.infore</groupId>
+	<artifactId>manage</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<modules>
+		<module>customer-api</module>
+		<module>common</module>
+		<module>manage-server-api</module>
+	</modules>
+	<packaging>pom</packaging>
 
-    <name>manage</name>
-    <description>project for Spring Boot</description>
+	<name>manage</name>
+	<description>project for Spring Boot</description>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.4.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <jug.version>3.1.4</jug.version>
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
-        <maven-source-plugin.version>2.4</maven-source-plugin.version>
-        <infore.common.version>0.0.1-SNAPSHOT</infore.common.version>
-       <!--  <gbap.rpc.version>1.0.1</gbap.rpc.version>
-        <giot.sdk.version>1.0.1</giot.sdk.version>
-        <giot.server.version>1.0.1</giot.server.version> -->
-        <!--为了与gbap兼容，固定fastjson为此版本-->
-        <fastjson.version>1.2.24</fastjson.version>
-    </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<jug.version>3.1.4</jug.version>
+		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+		<maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>2.4</maven-source-plugin.version>
+		<infore.common.version>0.0.1-SNAPSHOT</infore.common.version>
+		<!-- <gbap.rpc.version>1.0.1</gbap.rpc.version> <giot.sdk.version>1.0.1</giot.sdk.version> 
+			<giot.server.version>1.0.1</giot.server.version> -->
+		<!--为了与gbap兼容，固定fastjson为此版本 -->
+		<fastjson.version>1.2.24</fastjson.version>
+	</properties>
+	
+	<!-- 
+	<distributionManagement>
+		<repository>
+			这里的ID要和setting的id一致
+			<id>omni-nexus-releases</id>
+			<name>Nexus Release Repository</name>
+			<url>http://maven.omniselling.net:8088/nexus/content/repositories/releases/</url>
+		</repository>
+		这是打成快照版本的配置，如果不用这个snapshotRepository标签，打包失败，会报权限问题
+		<snapshotRepository>
+			<id>omni-nexus-snapshots</id>
+			<name>Nexus Snapshot Repository</name>
+			<url>http://maven.omniselling.net:8088/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+	 -->
+	
+		<distributionManagement>
+			<repository>
+				<!-- 这里的ID要和setting的id一致 -->
+				<id>nexus-releases</id>
+				<name>Nexus Release Repository</name>
+				<url>http://39.108.150.132:8088/repository/maven-releases/</url>
+			</repository>
+			<!--这是打成快照版本的配置，如果不用这个snapshotRepository标签，打包失败，会报权限问题 -->
+			<snapshotRepository>
+				<id>nexus-snapshots</id>
+				<name>Nexus Snapshot Repository</name>
+				<url>http://39.108.150.132:8088/repository/maven-snapshots/</url>
+			</snapshotRepository>
+		</distributionManagement> 
 
-   <!-- <distributionManagement>
-        <repository>
-            <id>public</id>
-            <name>Public Repositories</name>
-            <url>http://192.168.31.151:8081/nexus/content/groups/public/</url>
-        </repository>
-    </distributionManagement>-->
-
-<!--    <distributionManagement>
-        <repository>
-            <id>nexus-infore</id>
-            <name>Internal Releases</name>
-            <url>http://192.168.31.151:8081/nexus/content/repositories/manage</url>
-        </repository>
-    </distributionManagement>-->
-
-    <distributionManagement>
-       <!-- <repository>
-            <id>releases</id>
-            <name>Internal Releases</name>
-            <url>http://192.168.37.5:8081/nexus/content/repositories/releases/</url>
-        </repository>-->
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>Development Snapshot</name>
-            <url>http://192.168.37.5:8081/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-  <repositories>
-    <repository>
-      <id>nexus</id>
-      <name>Public Repositories</name>
-      <url>http://192.168.37.5:8081/nexus/content/groups/public/</url>
-    </repository>
-  </repositories>
+	<!--  
+	<distributionManagement>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Development Snapshot</name>
+			<url>http://192.168.37.5:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>Public Repositories</name>
+			<url>http://192.168.37.5:8081/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
+	-->
 
 </project>
